--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <!-- Bootstrap CSS -->
+     <!-- build:css css/main.css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <!-- endbuild-->
     <title>Ristorante Con Fusion</title>
 </head>
 
@@ -33,7 +35,7 @@
                 
             </ul>
              <spans class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <a id="loginButton" role="button">
                     <span class="fa fa-sign-in"></span> Login</a>
                 </span>
         </div>
@@ -171,7 +173,7 @@
                 </div>
                  <div class="col col-sm align-self-center">
                     <a type="button" class="btn btn-warning btn-sm btn-block" role="button" style="color: black;" 
-                        data-toggle="modal" data-target="#reserveModal" title="Or Call us at +852 12345678">Reserve a Table</a>
+                        id="reserveButton"  title="Or Call us at +852 12345678">Reserve a Table</a>
                 </div>
                 </div>
             </div>
@@ -352,31 +354,12 @@
            </div>
         </div>
     </footer>
-     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <!-- build:js js/main.js -->
+    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
-     <script>
-        $(document).ready(function(){
-            $("#mycarousel").carousel( { interval: 2000 } );
-            $("#carouselButton").click(function(){
-
-                if($("#carouselButton").children("span").hasClass("fa-pause"))
-                {
-                    $("#mycarousel").carousel('pause');
-                    $("#carouselButton").children("span").removeClass('fa-pause');
-                    $("#carouselButton").children("span").addClass('fa-play');
-                }
-                else
-                {
-                    $("#mycarousel").carousel('cycle');
-                    $("#carouselButton").children("span").removeClass('fa-play');
-                    $("#carouselButton").children("span").addClass("fa-pause");
-                }
-            });
-           
-        });
-    </script>
+    <script src="js/scripts.js"> </script>
+     <!-- endbuild-->
 
  
 </body>
